--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^4.0.4",
+    "express-handlebars-sections": "^1.0.1",
+    "express-session": "^1.17.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.0"
   },
